<resources>
    <string name="HTTP_URL_PATTERN">(https?://([-\\w\\.]+)+(:\\d+)?(/([\\w/_\\.-]*(\\?\\S+)?)?)?)</string>
    <string name="string_core_goals_intro">Whether you’ve come straight to this bite of the apple - or have already chewed over Core Beliefs, you’re going to find this really interesting!\n\nIt’s about what you are throwing your time, money and energies at: your Core Goals.\n\nYour goals are deeply affected by your thoughts and beliefs about the world.  What you believe about the world will determine how you choose to behave and order your life priorities in the world.\n\nIf you haven’t already considered <u><b>Core Beliefs</b></u>, it might be worth starting there first.</string>
    <string name="string_core_goals_intro2_1">So which is true for you?</string>
    <string name="string_core_goals_intro2_21">1.	I have set myself very clear goals</string>
    <string name="string_core_goals_intro2_22">2.	I have a vague idea of what I want to achieve in my life</string>
    <string name="string_core_goals_intro2_23">3.	I haven’t the faintest clue of any personal goals</string>
    <string name="string_core_goals_intro2_3">Click on one of the above to add your comments and thoughts about your current goals to your Journal.</string>
    <string name="string_core_goals_intro3_1">Every training course you attend will tell you that Goals must be SMART!</string>
    <string name="string_core_goals_intro3_2"><b>S</b> - specific, significant, stretching\n<b>M</b> - measurable, meaningful, motivational\n<b>A</b> - achievable, acceptable, action-oriented\n<b>R</b> - realistic, relevant, results-oriented\n<b>T</b> - time-based, tangible, trackable</string>
    <string name="string_core_goals_intro3_3">How many of your personal goals are SMART compliant?</string>
    <string name="title_activity_core_belife_intro">CORE BELIEFS</string>
    <string name="title_activity_core_belife_splash">CORE BELIEFS</string>
    <string name="string_core_belifes_intro">OK, let’s rock!\n\nThis is a journey to the centre of your being! What will you find at the core of who you are?\n\nDiscover your identity, considering to the collective wisdom of fellow travellers including presidents, actors, philosophers, scientists, singers and comedians.</string>
    <string name="string_core_belifes_intro2">For those that make you think, use the <b>“Add to Journal”</b> to record your thoughts, from grand things like what gives you value and what the purpose is for your life, to everyday things like how the film you watched last night made you feel.\n\nTime to begin this epic interactive journey into your core beliefs about the world and how they affect your sense of identity, value and purpose.</string>
    <string name="title_activity_core_status_intro">CORE STATUS</string>
    <string name="title_activity_core_status_quiz">CORE STATUS</string>
    <string name="core_status_intro_heading">Introduction</string>
    <string name="core_status_intro_content1">If you’ve already chewed over Core Beliefs or Core Goals, you’ll be wondering what Core Status is about! This is about you – how you feel about yourself as you track on through the world. In particular, the Core Status will look at your S-H-M:</string>
    <string name="core_status_intro_content2">Security\n\nHappiness\n\nMotivation</string>
    <string name="core_status_intro_heading_s">Security</string>
    <string name="core_status_intro_quote_s"></string>
    <string name="core_status_intro_source_s"></string>
    <string name="core_status_intro_content_s">\n<b>Security</b>\n\n\nWhat is it that makes me feel secure or insecure?\n\nHow can I maximise personal security?</string>
    <string name="core_status_intro_heading_h">\n<b>Happiness</b>\n\n\n“The purpose of our lives is to be happy,”</string>
    <string name="core_status_intro_quote_h">What is happiness?\n\nAm I happy?\n\nCould I be happier?\n\nWhat makes me happy?</string>
    <string name="core_status_intro_source_h">Dalai Lama (born 1935)</string>
    <string name="core_status_intro_content_h">‘The teens used to be the golden years. Then it was decreed that life began at 40 but it seems true happiness does not begin until you hit 55,’ study for First Direct reported in The Telegraph 2.9.10, linking it to retirement and paying off mortgages. ‘This trend continues as they get older, with 71% of those older than 65 content with their lot’.\n\n‘One in four friendships is entirely digital with friends conversing at least once a week via Facebook, Twitter etc. On average, they last 6 years before meeting face to face’ – Future First, December 2013\n\n‘Britons have become miserable because we are selfish, unfit and anti-social, a group of eminent thinkers claims’ – Daily Telegraph 13.4.11. Action for Happiness, backed by the Dalai Lama, launched to combat this.</string>
    <string name="core_status_intro_heading_m">\n<b>Motivation</b>\n\n\n“Motivation is a fire from within. If someone else tries to light that fire under you, chances are it will burn very briefly,”</string>
    <string name="core_status_intro_quote_m">What motivates you to get out of bed each morning?\n\nWhat lights your fire and makes sure it doesn’t go out?</string>
    <string name="core_status_intro_source_m">Stephen Covey</string>
    <string name="core_status_intro_content_m">What motivates you to get out of bed each morning?\n\nWhat lights your fire and makes sure it doesn’t go out?</string>
    <string name="title_activity_journal_intro">JOURNAL</string>
    <string name="title_activity_unconnected_intro">UNCONNECTED</string>
    <string name="title_activity_unconnected_quiz">UNCONNECTED</string>
    <string name="title_activity_unconnected">UNCONNECTED</string>
    <string name="title_activity_unconnected_close1">UNCONNECTED</string>
    <string name="title_activity_unconnected_close2">UNCONNECTED</string>
    <string name="title_activity_unconnected_result">UNCONNECTED</string>
    <string name="string_unconnected_quiz_title_1">JESUS CHRIST’S UNIQUE\nBACKGROUND AND AMAZING CLAIMS</string>
    <string name="string_unconnected_quiz_subtitle_1">What do you know about him and his claims?\n• Consider each one and give a score on a sliding scale 1 – 10\n• 1 = ‘I’ve never heard that!’; 5 = ‘I might have heard that’; 10 = ‘I knew that’</string>
    <string name="string_unconnected_result_1">10 – 20\nAt least you know more about the claims of Jesus Christ than perhaps you did! Here’s a question for you: there are three possibilities – Jesus was mad, bad OR who he said he was, the Son of God! Which one do you think it is and on what basis? Keep an open mind and stay on the journey. There’s more evidence to sift and people from history to hear.</string>
    <string name="string_unconnected_result_2">21 – 60\nThere are some things that you have recalled here from people you’ve known, perhaps from relatives long gone and maybe from experiences you’ve had. As you think about the many quotes in the third section of Life Foundations on Spirit, consider whether there’s a longing in you for that best connection Jesus Christ offers. Perhaps a new spiritual life awaits.</string>
    <string name="string_unconnected_result_3">61 – 100\nIt looks like you are coming close to finding that best connection to the new life in Christ. There’s more to read through but if you want to fast-track to make that connection, tap here (link to http://connect4life.org.uk/unconnected/unconnected-introduction). You may still be coming towards that point, so why not talk to God with your questions and ask for his help – it’s called praying.</string>
    <string name="string_unconnected_quiz_title_2">The Lewis Litmus Test!</string>
    <string name="string_unconnected_quiz_subtitle_2">Give yourself a score of 1 – 10 for each quote from Lewis where 10 is high in agreement\nHIGH FIVE FROM C.S. LEWIS! Academic, Intellectual, Writer and Philosopher born in Belfast 1898</string>
    <string name="string_unconnected_result_4">5 – 10\nWell done for sticking with Best Connections App this far! Hopefully, there’s much that you have found of use or interest in the different sections. As you’ve nearly completed this, why not see it through to the end then at least you can say you’ve checked out fully the possibility of a Connected Life?</string>
    <string name="string_unconnected_result_5">11 – 25\nThis has been an intriguing journey for you! How far do you think you have come and how far will you go in taking Jesus Christ seriously in his offer to connect you to God? Lewis’ fourth comment here is very pertinent in helping you to assess the claims of Christ. Lewis also said that Jesus was either bad, mad or who he said he is.</string>
    <string name="string_unconnected_result_6">26 – 50\nHopefully the light is getting brighter and things are becoming clearer! Making the Best Connection is about discovering your Identity, Value and Purpose so you can live life to the full because Jesus can bridge the gap from you to God and from darkness to light. As the sun rises, so dark shadows take shape and we see the light of day.</string>
    <string name="string_unconnected_quiz_title_3">CONNECTION – THE FINAL FRONTIER!</string>
    <string name="string_unconnected_quiz_subtitle_3">Give yourself a score of 1 – 10 where 10 is highest positive reaction</string>
    <string name="string_unconnected_result_7">10 – 15\nIt looks like this isn’t your time! As a ‘last - chance - saloon’, try watching the short video and reading the pdf on the link below. If the light still doesn’t go on, why not keep the app on the phone and go over notes you’ve made in My Journal? Maybe then you might find value in revisiting the app in a few weeks?</string>
    <string name="string_unconnected_result_8">16 – 50\nYou’ve come to a good place – a springboard into The Connected Life. There’s probably a few more ‘i’s to dot and ‘t’s to cross, but you might want to find a helpful local course run by a church that will help you – two that are well known and popular are Alpha (link to http://www.alpha.org/try) and Christianity Explored (Link to http://www.christianityexplored.org/course/find)</string>
    <string name="string_unconnected_result_9">51 – 100\nAre you ready for this? The most exciting and thrilling connection you’ll ever make and one that will completely fulfil and transform your life from disappointing mediocrity – it will put you into a new orbit with an ending that is a truly happy landing! To make the Best Connection, visit this link and use the prayer to help you – it will also be useful for you to consider Alpha or Christianity Explored as shown for those scoring 16 – 50.</string>
    <string name="title_activity_disconnected_intro">DISCONNECTED</string>
    <string name="title_activity_disconnected_quiz">DISCONNECTED</string>
    <string name="title_activity_disconnected_result">DISCONNECTED</string>
    <string name="string_lfsp_close_2_1">“I reject any religious doctrine that does not appeal to reason and is in conflict with morality … My interpretation, in other words, is that in Jesus’ own life is the key of his nearness to God; that he expressed, as no other could, the spirit and will of God. It is in this sense that I see him and recognize him as the Son of God…. And because the life of Jesus has the significance and the transcendency to which I have alluded, I believe that he belongs not solely to Christianity, but to the entire world; to all races and people, it matters little under what flag, name or doctrine they may work, profess a faith, or worship a God inherited from their ancestors.”</string>
    <string name="string_lfsp_close_2_2">Mahatma Ghandi</string>
    <string name="string_lfsp_close_2_3">The number of people who have found their connection with God through the man Jesus Christ around the world has nearly quadrupled in the last 100 years, from about 600 million in 1910 to more than <b>2 billion</b> in 2010.</string>
</resources>