<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_above="@+id/imageViewNext">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/string_lfsp_close_2_1"
                android:id="@+id/textViewQuote"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/string_lfsp_close_2_2"
                android:id="@+id/textViewSourceNDate"
                android:layout_below="@+id/textViewQuote"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/string_lfsp_close_2_3"
                android:id="@+id/textViewDes"
                android:layout_below="@+id/textViewSourceNDate"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:textStyle="italic"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </RelativeLayout>
    </ScrollView>

    <ImageView
        android:layout_marginTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageViewNext"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:src="@mipmap/ic_next_button_red" />

</RelativeLayout>
