<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.syncbridge.bestconnections.CoreGoalsIntro2Activity"
    android:background="@mipmap/ic_cg_background">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.syncbridge.bestconnections.CoreGoalsIntro2Activity"
            android:id="@+id/relativeLayoutCoreGoalsIntro2"
            android:visibility="invisible">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/imageViewNext2"
                android:layout_weight="1.0">

                <RelativeLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" >

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:id="@+id/textView1"
                        android:text="@string/string_core_goals_intro3_1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:textSize="25sp"
                        android:id="@+id/textView2"
                        android:text="@string/string_core_goals_intro3_2"
                        android:layout_below="@+id/textView1"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView3"
                        android:textSize="25sp"
                        android:text="@string/string_core_goals_intro3_3"
                        android:layout_below="@+id/textView2"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp" />

                </RelativeLayout>

            </ScrollView>



            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewNext2"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_next_button_red"
                android:scaleType="fitCenter"
                android:layout_weight="1.0"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context="com.syncbridge.bestconnections.CoreGoalsIntro2Activity"
            android:id="@+id/relativeLayoutCoreGoalsIntro"
            android:visibility="invisible">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:id="@+id/scrollView2"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/imageViewNext"
                android:layout_weight="1.0">


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1.0">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_core_goals_intro2_1"
                        android:id="@+id/textViewIntro1"
                        android:textSize="25sp"
                        android:layout_weight="1.0"
                        android:layout_marginBottom="5dp" />
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.0"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/string_core_goals_intro2_21"
                            android:id="@+id/textViewIntro21"
                            android:textSize="25sp"
                            android:layout_weight="0.2"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold" />
                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.8"
                            android:src="@mipmap/ic_write"
                            android:scaleType="centerInside"
                            android:id="@+id/imageView1" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.0"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/string_core_goals_intro2_22"
                            android:id="@+id/textViewIntro22"
                            android:textSize="25sp"
                            android:layout_weight="0.2"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold" />
                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.8"
                            android:src="@mipmap/ic_write"
                            android:scaleType="centerInside"
                            android:id="@+id/imageView2" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1.0"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">
                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:text="@string/string_core_goals_intro2_23"
                            android:id="@+id/textViewIntro23"
                            android:textSize="25sp"
                            android:layout_weight="0.2"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:textStyle="bold" />
                        <ImageView
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="0.8"
                            android:src="@mipmap/ic_write"
                            android:scaleType="centerInside"
                            android:id="@+id/imageView3" />
                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/string_core_goals_intro2_3"
                        android:id="@+id/textViewIntro3"
                        android:textSize="20sp"
                        android:layout_weight="1.0"
                        android:layout_marginTop="10dp" />

                </LinearLayout>
            </ScrollView>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageViewNext"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:src="@mipmap/ic_next_button_red"
                android:scaleType="fitCenter"
                android:layout_weight="1.0"/>

        </RelativeLayout>

    </FrameLayout>

    <!-- The navigation drawer -->
    <include layout="@layout/layout_navigation_drawer" android:id="@+id/left_drawer"/>

</android.support.v4.widget.DrawerLayout>
